--- a/src/_leaflet-zoom-modernizr.scss
+++ b/src/_leaflet-zoom-modernizr.scss
@@ -12,24 +12,26 @@
 $leaflet-min-zoom		:  1 !default; 
 $leaflet-max-zoom		: 18 !default; 
 
-$display-value			: '' !default;		// Value for display:... when element is visible. Default = '' => no class created.
 
+$lzm-display-value			: '' !default;		// Value for display:... when element is visible. Default = '' => no class created.
+$lzm-incl-no-selector	: false !default; // if true classes for 'show-for-no-TEST are included
+$lzm-incl-table-display	: true !default;	// if true classes for table-elements (TABLE, TR,TD etc.) are included 
 
 
 //******************************************************************************************
-//	@mixin show-and-hide-for-leaflet-zoom-modernizr($min-zoom, $max-zoom, $incl-table-display)
+//	@mixin show-and-hide-for-leaflet-zoom-modernizr($min-zoom, $max-zoom)
 //	Create show/hide-for-leaflet-zoom-N,  show/hide-for-leaflet-zoom-N-up and show/hide-for-leaflet-zoom-N-down, 
 //	N = any number between $min-zoom and $max-zoom
 //	
 
 //******************************************************************************************
-@mixin show-and-hide-for-leaflet-zoom-modernizr($min-zoom: $leaflet-min-zoom, $max-zoom: $leaflet-max-zoom, $incl-table-display: true ){
+@mixin show-and-hide-for-leaflet-zoom-modernizr($min-zoom: $leaflet-min-zoom, $max-zoom: $leaflet-max-zoom){
 
 	@for $zoom from $min-zoom through $max-zoom {
-						//show-and-hide-for-modernizr-test( $modernizr-test								, $parent-element-type, $incl-no-selector	, $display-value, $incl-table-display)
-		@include	show-and-hide-for-modernizr-test( leaflet-zoom- + $zoom					,	''									, false							,	$display-value, $incl-table-display);
-		@include	show-and-hide-for-modernizr-test( leaflet-zoom- + $zoom + -up		,	''									, false							,	$display-value, $incl-table-display);
-		@include	show-and-hide-for-modernizr-test( leaflet-zoom- + $zoom + -down	,	''									, false							,	$display-value, $incl-table-display);
+						//show-and-hide-for-modernizr-test( $modernizr-test								, $parent-element-type, $incl-no-selector			, $display-value		, $incl-table-display			)
+		@include	show-and-hide-for-modernizr-test( leaflet-zoom- + $zoom					,	''									, $lzm-incl-no-selector	,	$lzm-display-value, $lzm-incl-table-display	);
+		@include	show-and-hide-for-modernizr-test( leaflet-zoom- + $zoom + -up		,	''									, $lzm-incl-no-selector	,	$lzm-display-value, $lzm-incl-table-display	);
+		@include	show-and-hide-for-modernizr-test( leaflet-zoom- + $zoom + -down	,	''									, $lzm-incl-no-selector	,	$lzm-display-value, $lzm-incl-table-display	);
 	}
 
 }
